<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.bg51az.comcet325bg51az.list_tourists">

    <item android:id="@+id/orderDisplay" android:title="@string/order_by">
        <menu>
            <item android:id="@+id/orderAll" android:title="@string/order_all"/>
            <item android:id="@+id/orderFav" android:title="@string/order_fav"/>
            <item android:id="@+id/orderPlanned" android:title="@string/order_planned"/>
            <item android:id="@+id/orderVisited" android:title="@string/order_visited"/>
        </menu>
    </item>

    <item android:id="@+id/favCurrency"
        android:title="@string/fav_Currency">
        <menu>
            <item android:id="@+id/EUR" android:title="@string/euro"/>
            <item android:id="@+id/USD" android:title="@string/usDollar"/>
            <item android:id="@+id/JPY" android:title="@string/japanYen"/>
            <item android:id="@+id/CNY" android:title="@string/chinaYuan"/>
            <item android:id="@+id/KRW" android:title="@string/koreaWon"/>
        </menu>
    </item>
</menu>