<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/updateTourist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="@dimen/text_size_header"
        android:text="@string/update_tourist" />

    <EditText
        android:id="@+id/editUpdateTouristName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nameInput"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/editUpdateTouristCity"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:hint="@string/locationCityInput"
            android:inputType="text" />

        <EditText
            android:id="@+id/editUpdateTouristCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/locationCountryInput"
            android:layout_toRightOf="@+id/editInputTouristCity"
            android:inputType="text" />
    </LinearLayout>

    <EditText
        android:id="@+id/editUpdateTouristDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descriptionInput"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/text_size"
            android:text="@string/favouriteInput" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBoxUpdateFav"
            android:onClick="favClicked"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/editUpdateTouristLatitude"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:hint="@string/latitudeInput"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/editUpdateTouristLongitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/longitudeInput"
            android:layout_alignBaseline="@+id/editInputTouristLatitude"
            android:layout_toRightOf="@+id/editInputTouristLatitude"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <EditText
        android:id="@+id/editUpdateTouristPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/priceInput"
        android:inputType="numberDecimal" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBarUpdateRank"
        android:numStars="5"
        android:rating="1.0"
        android:stepSize="1.0"/>

</LinearLayout>