<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bg51az.comcet325bg51az.ListActivity">

    <TextView
        android:id="@+id/cityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_space"/>

    <ImageView
        android:id="@+id/condIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/cityText"/>

    <TextView
        android:id="@+id/condDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/condIcon"/>

    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/condDesc"/>

    <TextView
        android:id="@+id/pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/condDesc"
        android:text="@string/pressure"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/pressureInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/pressure"
        android:layout_toRightOf="@+id/pressure"/>

    <TextView
        android:id="@+id/humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/pressure"
        android:text="@string/humidity"/>

    <TextView
        android:id="@+id/humidityInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/humidity"
        android:layout_toRightOf="@+id/humidity"
        android:layout_marginLeft="4dp"/>

    <TextView
        android:id="@+id/wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/humidity"
        android:text="@string/wind"/>

    <TextView
        android:id="@+id/windSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/wind"
        android:layout_toRightOf="@+id/wind"
        android:layout_marginLeft="4dp" />

    <TextView
        android:id="@+id/windDeg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/wind"
        android:layout_toRightOf="@+id/windSpeed"
        android:layout_marginLeft="4dp"/>

    <TextView
        android:id="@+id/cloud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/wind"
        android:text="@string/clouds"/>

    <TextView
        android:id="@+id/cloudiness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/cloud"
        android:layout_toRightOf="@+id/cloud"
        android:layout_marginLeft="4dp"/>
<!--
    <TextView
        android:id="@+id/rain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/cloud"
        android:text="@string/rain"/>

    <TextView
        android:id="@+id/rainInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/rain"
        android:layout_toRightOf="@id/rain"
        android:layout_marginLeft="4dp" />
-->

    <EditText
        android:id="@+id/editCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/cloud"
        android:layout_centerHorizontal="true"
        android:inputType="text"
        android:lines="1"
        android:hint="@string/city"
        android:layout_marginTop="@dimen/margin_space"/>

    <EditText
        android:id="@+id/editCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editCity"
        android:layout_centerHorizontal="true"
        android:inputType="text"
        android:lines="1"
        android:hint="@string/country"
        android:layout_marginTop="@dimen/margin_space" />

    <Button
        android:id="@+id/btnWeatherAPI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editCountry"
        android:layout_marginTop="@dimen/margin_space"
        android:layout_centerHorizontal="true"
        android:text="@string/weatherCall"/>


</RelativeLayout>