<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/cityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:id="@+id/condIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/cityText"/>

    <TextView
        android:id="@+id/condDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/cityText"/>

    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_alignBaseline="@+id/condDesc"
        android:layout_toRightOf="@+id/condDesc"/>

    <TextView
        android:id="@+id/pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/condDesc"
        android:text="@string/pressure"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/pressureInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/pressure"
        android:layout_toRightOf="@+id/pressure"/>

    <TextView
        android:id="@+id/humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/pressure"
        android:text="@string/humidity"/>

    <TextView
        android:id="@+id/humidityInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/humidity"
        android:layout_toRightOf="@+id/humidity"
        android:layout_marginLeft="4dp"/>

    <TextView
        android:id="@+id/wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/humidity"
        android:text="@string/wind"/>

    <TextView
        android:id="@+id/windSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/wind"
        android:layout_toRightOf="@+id/wind"
        android:layout_marginLeft="4dp" />

    <TextView
        android:id="@+id/windDeg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/wind"
        android:layout_toRightOf="@+id/windSpeed"
        android:layout_marginLeft="4dp"/>

    <TextView
        android:id="@+id/cloud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/wind"
        android:text="@string/clouds"/>

    <TextView
        android:id="@+id/cloudiness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/cloud"
        android:layout_toRightOf="@+id/cloud"
        android:layout_marginLeft="4dp"/>
</RelativeLayout>